// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<InformationComponent /> should render with custom props 1`] = `
preact-render-spy (1 nodes)
-------
<div class="as-information custom-container-class">
  
                      <span class="total-hits">12</span>
                      <span class="total-items">32</span>
                  
</div>

`;

exports[`<InformationComponent /> should render with default props 1`] = `
Object {
  "children": Array [],
  "classNames": Object {
    "container": "",
  },
  "data": Object {
    "total_hits": 12,
    "total_items": 32,
  },
  "formatData": [Function],
  "target": "#some-tagret",
  "template": Object {
    "container": "Found {{total_hits}}/{{total_items}}",
  },
}
`;

exports[`<InformationComponent /> should render with default props 2`] = `
preact-render-spy (1 nodes)
-------
<div class="as-information ">Found 12/32</div>

`;

exports[`<InformationComponent /> should update content when passing new data 1`] = `
preact-render-spy (1 nodes)
-------
<div class="as-information ">Found 34/67</div>

`;
